--- a/package.json
+++ b/package.json
@@ -38,31 +38,24 @@
     "@vitejs/plugin-react-swc": "*",
     "class-variance-authority": "^0.7.1",
     "clsx": "*",
-    "cmdk": "^1.1.1",
     "dnd-core": "*",
-    "embla-carousel-react": "^8.6.0",
     "eslint-plugin-react-hooks": "*",
     "eslint-plugin-react-refresh": "*",
     "globals": "*",
     "gsap": "^3.13.0",
     "hono": "*",
-    "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
     "motion": "*",
     "next-themes": "^0.4.6",
     "path": "*",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-day-picker": "^8.10.1",
     "react-dnd": "*",
     "react-dnd-html5-backend": "*",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.55.0",
-    "react-resizable-panels": "^2.1.7",
     "react-responsive-masonry": "*",
-    "recharts": "^2.15.2",
     "sonner": "^2.0.3",
     "tailwind-merge": "*",
-    "vaul": "^1.1.2",
     "vite": "*"
   },
   "devDependencies": {
@@ -70,18 +63,28 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
     "@types/node": "^20.10.0",
+    "@types/react-day-picker": "^5.2.1",
     "@types/react-responsive-masonry": "^2.6.0",
+    "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react-swc": "^3.10.2",
-    "@vitest/ui": "^1.0.0",
+    "@vitest/ui": "^3.2.4",
+    "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.0",
+    "input-otp": "^1.4.2",
     "jsdom": "^23.0.0",
     "lint-staged": "^15.0.0",
     "prettier": "^3.0.0",
+    "react-day-picker": "^9.11.1",
+    "react-hook-form": "^7.65.0",
+    "react-resizable-panels": "^3.0.6",
+    "recharts": "^3.3.0",
     "terser": "^5.44.0",
+    "vaul": "^1.1.2",
     "vite": "6.3.5",
-    "vitest": "^1.0.0"
+    "vitest": "^3.2.4"
   },
   "scripts": {
     "dev": "vite",
